Prevent the body from overflowing duo to aos animations by adding overflow:hidden to the body. In turn, I need to change the nav from sticky to fixed. Sticky is similar to fixed with the exception that it does not take space from its parent. For this reason, I need to add additional margin-bottom to the nav

--- a/style/main.css
+++ b/style/main.css
@@ -9,12 +9,14 @@
   100% { margin-bottom: 20px; }
 }
 
+
 html,
 body {
 	  font-family: 'Raleway', sans-serif;
 	  font-size: 18px;
 	  background: #21232c;
 	  color: #aaa;
+    overflow-x: hidden;
 }
 
 * {
@@ -84,11 +86,13 @@ h1 {
 nav {
     background-color: #21232c;
     padding: 5px;
-    position: sticky;
+    position: fixed;
     top: 0;
     transition: box-shadow 0.25s, border-bottom-width 0.25s;
     border-bottom: 0px solid white;
     z-index: 1100;
+    margin-bottom: 80px;
+    width: 100%;
 }
 
 nav.scrolling {
